--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
         android:layout_width="0dp"
         android:layout_height="64dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:fontFamily="@font/lemon_reguler"
         android:text="Editor"
@@ -58,7 +58,7 @@
         app:layout_constraintTop_toBottomOf="@+id/btnGoListQuestion" />
 
     <Button
-        android:id="@+id/btnGoTBK"
+        android:id="@+id/btnGoAcak"
         style="@style/Widget.Material3.Button.TonalButton"
         android:layout_width="0dp"
         android:layout_height="64dp"
@@ -72,7 +72,7 @@
         app:layout_constraintTop_toBottomOf="@+id/btnGoTTS" />
 
     <Button
-        android:id="@+id/btnGoWiw"
+        android:id="@+id/btnGoScan"
         style="@style/Widget.Material3.Button.TonalButton.Icon"
         android:layout_width="0dp"
         android:layout_height="64dp"
@@ -81,9 +81,26 @@
         android:text="Scan"
         android:textColor="@color/button"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/btnGoTBK"
-        app:layout_constraintStart_toStartOf="@+id/btnGoTBK"
-        app:layout_constraintTop_toBottomOf="@+id/btnGoTBK" />
+        app:layout_constraintEnd_toEndOf="@+id/btnGoAcak"
+        app:layout_constraintStart_toStartOf="@+id/btnGoAcak"
+        app:layout_constraintTop_toBottomOf="@+id/btnGoAcak"
+        tools:ignore="HardcodedText" />
+
+    <Button
+        android:id="@+id/btnOnline"
+        style="@style/Widget.Material3.Button.TonalButton.Icon"
+        android:layout_width="0dp"
+        android:layout_height="64dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/lemon_reguler"
+        android:text="Online"
+        android:textColor="@color/button"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/btnGoAcak"
+        app:layout_constraintHorizontal_bias="0.166"
+        app:layout_constraintStart_toStartOf="@+id/btnGoAcak"
+        app:layout_constraintTop_toBottomOf="@+id/btnGoScan"
+        tools:ignore="HardcodedText" />
 
     <Button
         android:id="@+id/btnTrophy"
@@ -104,7 +121,7 @@
         android:layout_marginEnd="16dp"
         app:icon="@drawable/power_off_solid"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/btnScanQRCode" />
+        tools:layout_editor_absoluteY="763dp" />
 
     <Button
         android:id="@+id/btnUserSecret"
@@ -149,15 +166,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/terka_banner" />
 
-    <Button
-        android:id="@+id/btnScanQRCode"
-        style="@style/Widget.Material3.Button.IconButton.Outlined"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:icon="@drawable/person_chalkboard_solid"
-        app:layout_constraintStart_toEndOf="@+id/btnDatabase"
-        app:layout_constraintTop_toTopOf="@+id/btnDatabase" />
-
     <TextView
         android:id="@+id/textView7"
         android:layout_width="0dp"
@@ -167,7 +175,7 @@
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnGoWiw" />
+        app:layout_constraintTop_toBottomOf="@+id/btnOnline" />
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
