--- a/app/src/main/res/layout/dialog_yes_no.xml
+++ b/app/src/main/res/layout/dialog_yes_no.xml
@@ -12,7 +12,7 @@
         app:cardCornerRadius="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="207dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -23,27 +23,26 @@
 
             <Button
                 android:id="@+id/btnOne"
-                style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="36dp"
                 android:layout_marginTop="24dp"
                 android:text="Cancel"
                 app:layout_constraintEnd_toStartOf="@+id/btnTwo"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvMessage" />
+                app:layout_constraintTop_toBottomOf="@+id/tvMessage"
+                tools:ignore="HardcodedText" />
 
             <Button
                 android:id="@+id/btnTwo"
-                style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Sign Out"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/btnOne"
-                app:layout_constraintTop_toTopOf="@+id/btnOne" />
+                app:layout_constraintTop_toTopOf="@+id/btnOne"
+                tools:ignore="HardcodedText" />
 
             <TextView
                 android:id="@+id/tvTitle"
@@ -51,12 +50,15 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
-                android:text="Keluar dari akun ini?"
-                android:textSize="24sp"
+                android:text="Text Title"
+                android:textColor="@color/button"
+                android:textSize="20sp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="HardcodedText" />
 
             <TextView
                 android:id="@+id/tvMessage"
@@ -65,10 +67,13 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
-                android:text="Harap menyimpan Username dan password Anda saat ini, untuk masuk kembali"
+                android:text="Text Messages"
+                android:textColor="@color/button"
+                android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
+                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
+                tools:ignore="HardcodedText" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
