--- a/app/src/main/res/layout/dialog_setting.xml
+++ b/app/src/main/res/layout/dialog_setting.xml
@@ -27,28 +27,27 @@
 
             <Switch
                 android:id="@+id/swSettingKeyboard"
-                android:layout_width="0dp"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="32dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginBottom="24dp"
                 android:background="@drawable/button_image_disable"
                 android:padding="10dp"
                 android:text="Android Keyboard"
                 android:textColor="@color/button2_color"
                 android:textSize="20sp"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imgBtnSound"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/imgBtnSound"
+                app:layout_constraintTop_toTopOf="@+id/imgBtnSound"
+                app:layout_constraintVertical_bias="0.0"
                 tools:ignore="UseSwitchCompatOrMaterialXml" />
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/background_gradient_zeus_miracle"
                 android:padding="10dp"
                 android:text="Quick Setting"
                 android:textColor="@color/button"
@@ -59,39 +58,18 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <Button
-                android:id="@+id/btnSettingDisableAds"
-                style="@style/Widget.Material3.Button.ElevatedButton.Icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:text="Disable Ads"
-                app:icon="@drawable/audio_description_solid"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/swSettingKeyboard" />
-
             <ImageView
                 android:id="@+id/imgBtnSound"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:layout_marginStart="40dp"
                 android:layout_marginTop="28dp"
                 android:background="@drawable/button_image_enable"
                 android:padding="5dp"
+                app:layout_constraintEnd_toStartOf="@+id/swSettingKeyboard"
+                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView3"
                 app:srcCompat="@drawable/volume_high_solid" />
-
-            <ImageView
-                android:id="@+id/btnEditorShow"
-                android:layout_width="48sp"
-                android:layout_height="48sp"
-                android:layout_marginStart="16dp"
-                android:background="@drawable/button_image_disable"
-                app:layout_constraintStart_toEndOf="@+id/imgBtnSound"
-                app:layout_constraintTop_toTopOf="@+id/imgBtnSound"
-                app:srcCompat="@android:drawable/ic_menu_today" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
