--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,7 +75,7 @@
         android:layout_height="64dp"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/lemon_reguler"
-        android:text="Online"
+        android:text="Unduh"
         android:textColor="@color/button"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/btnGoAcak"
