--- a/app/src/main/res/layout/dialog_menu_item_online.xml
+++ b/app/src/main/res/layout/dialog_menu_item_online.xml
@@ -8,16 +8,16 @@
     <TextView
         android:id="@+id/textInfo"
         android:layout_width="0dp"
-        android:layout_height="64sp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="4dp"
-        android:background="@drawable/box_shape_hint"
+        android:background="@drawable/box_shape_active"
         android:fontFamily="@font/lemon_reguler"
         android:gravity="center_vertical"
         android:paddingHorizontal="15sp"
         android:paddingVertical="10sp"
-        android:text="Level: 00001\nCategory: Testing"
+        android:text="Level: 00001\nCategory: Testing\nby: Andra"
         android:textColor="@color/button"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -27,10 +27,9 @@
 
     <ImageView
         android:id="@+id/btnDownload"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/box_shape_hint"
         android:padding="5sp"
         app:layout_constraintBottom_toBottomOf="@+id/textInfo"
         app:layout_constraintEnd_toEndOf="@+id/textInfo"
