--- a/app/src/main/res/layout/dialog_setting.xml
+++ b/app/src/main/res/layout/dialog_setting.xml
@@ -48,7 +48,8 @@
                 android:id="@+id/textView3"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
+                android:paddingHorizontal="20dp"
+                android:paddingVertical="10dp"
                 android:text="Quick Setting"
                 android:textColor="@color/button"
                 android:textSize="20sp"
@@ -64,7 +65,6 @@
                 android:layout_height="48dp"
                 android:layout_marginTop="28dp"
                 android:background="@drawable/button_image_enable"
-                android:padding="5dp"
                 app:layout_constraintEnd_toStartOf="@+id/swSettingKeyboard"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
