--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -42,7 +42,7 @@
                         android:id="@+id/include_header"
                         layout="@layout/play_header_part"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="80dp" />
 
                 </FrameLayout>
 
@@ -168,7 +168,6 @@
                 android:id="@+id/container6"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
                 android:padding="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
