--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,130 +7,168 @@
     android:background="@drawable/background_gradient_teen_notebook"
     tools:context=".ui.MainActivity">
 
-    <Button
-        android:id="@+id/btnGoListQuestion"
-        style="@style/Widget.Material3.Button.TonalButton"
-        android:layout_width="0dp"
-        android:layout_height="64dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
-        android:fontFamily="@font/lemon_reguler"
-        android:text="Editor"
-        android:textColor="@color/button"
-        android:textSize="20sp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/header"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:paddingHorizontal="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
-        tools:ignore="HardcodedText" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <Button
-        android:id="@+id/btnGoTTS"
-        style="@style/Widget.Material3.Button.TonalButton.Icon"
-        android:layout_width="0dp"
-        android:layout_height="64dp"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/lemon_reguler"
-        android:text="Main"
-        android:textColor="@color/button"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/btnGoListQuestion"
-        app:layout_constraintHorizontal_bias="0.225"
-        app:layout_constraintStart_toStartOf="@+id/btnGoListQuestion"
-        app:layout_constraintTop_toBottomOf="@+id/btnGoListQuestion"
-        tools:ignore="HardcodedText" />
+        <Button
+            android:id="@+id/btnTrophy"
+            style="@style/Widget.Material3.Button.IconButton.Outlined"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:icon="@drawable/user_ninja_solid"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/btnGoAcak"
-        style="@style/Widget.Material3.Button.TonalButton"
-        android:layout_width="0dp"
-        android:layout_height="64dp"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/lemon_reguler"
-        android:text="Acak"
-        android:textColor="@color/button"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/btnGoTTS"
-        app:layout_constraintStart_toStartOf="@+id/btnGoListQuestion"
-        app:layout_constraintTop_toBottomOf="@+id/btnGoTTS"
-        tools:ignore="HardcodedText" />
+        <Button
+            android:id="@+id/btnSettingMain"
+            style="@style/Widget.Material3.Button.IconButton.Outlined"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:icon="@drawable/gear_solid"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/btnGoScan"
-        style="@style/Widget.Material3.Button.TonalButton.Icon"
-        android:layout_width="0dp"
-        android:layout_height="64dp"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/lemon_reguler"
-        android:text="Scan"
-        android:textColor="@color/button"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/btnGoAcak"
-        app:layout_constraintStart_toStartOf="@+id/btnGoAcak"
-        app:layout_constraintTop_toBottomOf="@+id/btnGoAcak"
-        tools:ignore="HardcodedText" />
+        <include
+            layout="@layout/component_koin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btnSettingMain"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <Button
-        android:id="@+id/btnOnline"
-        style="@style/Widget.Material3.Button.TonalButton.Icon"
-        android:layout_width="0dp"
-        android:layout_height="64dp"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/lemon_reguler"
-        android:text="Unduh"
-        android:textColor="@color/button"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/btnGoAcak"
-        app:layout_constraintHorizontal_bias="0.166"
-        app:layout_constraintStart_toStartOf="@+id/btnGoAcak"
-        app:layout_constraintTop_toBottomOf="@+id/btnGoScan"
-        tools:ignore="HardcodedText" />
-
-    <Button
-        android:id="@+id/btnTrophy"
-        style="@style/Widget.Material3.Button.IconButton.Outlined"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        app:icon="@drawable/user_ninja_solid"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btnSettingMain"
-        style="@style/Widget.Material3.Button.IconButton.Outlined"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        app:icon="@drawable/gear_solid"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/logo"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/imgLogo"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/terka_banner"
-        tools:ignore="ContentDescription" />
+        app:layout_constraintTop_toBottomOf="@+id/header">
 
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
-        android:layout_width="wrap_content"
+        <ImageView
+            android:id="@+id/imgLogo"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/terka_banner"
+            tools:ignore="ContentDescription" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/menu"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        app:adSize="BANNER"
-        app:adUnitId="@string/banner"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logo">
+
+        <Button
+            android:id="@+id/btnOnline"
+            style="@style/Widget.Material3.Button.TonalButton.Icon"
+            android:layout_width="0dp"
+            android:layout_height="64dp"
+            android:fontFamily="@font/lemon_reguler"
+            android:text="Unduh"
+            android:textColor="@color/button"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="@+id/btnGoAcak"
+            app:layout_constraintStart_toStartOf="@+id/btnGoAcak"
+            app:layout_constraintTop_toBottomOf="@+id/btnGoScan"
+            tools:ignore="HardcodedText" />
+
+        <Button
+            android:id="@+id/btnGoScan"
+            style="@style/Widget.Material3.Button.TonalButton.Icon"
+            android:layout_width="0dp"
+            android:layout_height="64dp"
+            android:fontFamily="@font/lemon_reguler"
+            android:text="Scan"
+            android:textColor="@color/button"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="@+id/btnOnline"
+            app:layout_constraintHorizontal_bias="0.4"
+            app:layout_constraintStart_toStartOf="@+id/btnOnline"
+            app:layout_constraintTop_toBottomOf="@+id/btnGoAcak"
+            tools:ignore="HardcodedText" />
+
+        <Button
+            android:id="@+id/btnGoAcak"
+            style="@style/Widget.Material3.Button.TonalButton"
+            android:layout_width="0dp"
+            android:layout_height="64dp"
+            android:fontFamily="@font/lemon_reguler"
+            android:text="Acak"
+            android:textColor="@color/button"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="@+id/btnGoTTS"
+            app:layout_constraintStart_toStartOf="@+id/btnGoTTS"
+            app:layout_constraintTop_toBottomOf="@+id/btnGoTTS"
+            tools:ignore="HardcodedText" />
+
+        <Button
+            android:id="@+id/btnGoTTS"
+            style="@style/Widget.Material3.Button.TonalButton.Icon"
+            android:layout_width="0dp"
+            android:layout_height="64dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="28dp"
+            android:layout_marginEnd="32dp"
+            android:fontFamily="@font/lemon_reguler"
+            android:text="Main"
+            android:textColor="@color/button"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="HardcodedText" />
+
+        <Button
+            android:id="@+id/btnGoListQuestion"
+            style="@style/Widget.Material3.Button.TonalButton"
+            android:layout_width="0dp"
+            android:layout_height="64dp"
+            android:fontFamily="@font/lemon_reguler"
+            android:text="Editor"
+            android:textColor="@color/button"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="@+id/btnGoScan"
+            app:layout_constraintStart_toStartOf="@+id/btnGoScan"
+            app:layout_constraintTop_toBottomOf="@+id/btnOnline"
+            tools:ignore="HardcodedText" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/adsContainer"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent">
+
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/adView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            app:adSize="BANNER"
+            app:adUnitId="@string/banner"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
