--- a/app/src/main/res/layout/dialog_menu_item_online.xml
+++ b/app/src/main/res/layout/dialog_menu_item_online.xml
@@ -13,10 +13,10 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="4dp"
         android:background="@drawable/box_shape_active"
-        android:fontFamily="@font/lemon_reguler"
+        android:fontFamily="@font/acme"
         android:gravity="center_vertical"
         android:paddingHorizontal="15sp"
-        android:paddingVertical="10sp"
+        android:paddingVertical="5dp"
         android:text="Level: 00001\nCategory: Testing\nby: Andra"
         android:textColor="@color/button"
         android:textSize="16sp"
